--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <footer>
             <ul class="social-list">
                 <li class="social-list-item">
-                    <a class="icon-gmail" href="mailto: kseniaoz@gmail.com" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Ксения Озимина на Gmail</span></a>
+                    <a class="icon-gmail" href="mailto: oziminaksenia@gmail.com" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Ксения Озимина на Gmail</span></a>
                 </li>
                 <li class="social-list-item">
                     <a class="icon-insta" href="https://www.instagram.com/kseni_oz" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Профиль Ксении Озиминой в Instagram</span></a>
