чуток накидал версию под смартфоны

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body class="index">
     <div class="container">
         <header>
-            <img class="logo" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203">
+            <div class="logo"></div>
+            <!-- <img class="logo" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203"> -->
             <nav class="navigation">
                 <ul class="navigation-list">
                     <li class="navigation-list-item">
