--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#b5b5b5">
     <meta name="Description" content="A home page of photographer Ksenia Ozimina">
     <link rel="stylesheet" href="css/main.css">
-    <title>Ksenia Oz photographer portfolio</title>
+    <title>About Ksenia Oz</title>
 </head>
-<body>
+<body class="inner">
+    <div class="container">
         <header>
-            <div class="logo"></div>
-            <!-- <img class="logo" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203"> -->
+            <a href="index.html"><span class="visually-hidden">На главную</span><div class="logo"></div></a>
             <nav class="navigation">
                 <ul class="navigation-list">
                     <li class="navigation-list-item">
@@ -31,11 +31,31 @@
             </nav>
         </header>
         <main>
-            <h1 class="visually-hidden">Домашняя страница Ксении Озиминой</h1>
-            <img class="portrait" src="img/photo.jpg" alt="Портрет Ксении Озиминой" width="294" height="294">
-            <button class="button button-index">Посмотреть фотографии</button>
+            <section class="about-info">
+                <h1 class="visually-hidden">Краткая информация о Ксении Озиминой</h1>
+                   <div class="grid-element text-element1">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <p>And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity.
+                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
+                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
+                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire</p>
+                   </div>
+                   <div class="grid-element img-element1">
+                        <img src="img/about_image1.jpg" alt="Моя фотография" width="400" height="420">
+                   </div>
+                   <div class="grid-element img-element2">
+                        <img src="img/about_image2.jpg" alt="Моя вторая фотография" width="400" height="420">
+                   </div>
+                   <div class="grid-element text-element2">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <p>And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity.
+                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
+                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
+                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire</p>
+                   </div>
+            </section>
         </main>
-        <footer>
+        <footer class="footer-inner">
             <h2 class="visually-hidden">Как связаться с Ксенией Озиминой в социальных сетях</h2>
             <ul class="social-list">
                 <li class="social-list-item">
@@ -52,5 +72,6 @@
                 </li>
             </ul>
         </footer>
+    </div>
 </body>
 </html>
