доделал пока все, что есть на данный момент

--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#b5b5b5">
     <meta name="Description" content="A home page of photographer Ksenia Ozimina">
     <link rel="stylesheet" href="css/main.css">
-    <title>Обо мне</title>
+    <title>Контактная информация</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-list-item">
-                    <a href="#">Обо мне</a>
+                    <a href="about.html">Обо мне</a>
                 </li>
                 <li class="navigation-list-item">
                     <a href="portfolio.html">Портфолио</a>
@@ -24,38 +24,18 @@
                     <a href="#">Цены</a>
                 </li>
                 <li class="navigation-list-item">
-                    <a href="contacts.html">Контакты</a>
+                    <a href="#">Контакты</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main class="inner-main">
-        <section class="about-info">
-            <h1 class="visually-hidden">Краткая информация о Ксении Озиминой</h1>
-            <div class="grid-element text-element1">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity.
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                </p>
-            </div>
-            <div class="grid-element img-element1">
-                <img src="img/about_image1.jpg" alt="Моя фотография" width="400" height="420">
-            </div>
-            <div class="grid-element img-element2">
-                <img src="img/about_image2.jpg" alt="Моя вторая фотография" width="400" height="420">
-            </div>
-            <div class="grid-element text-element2">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity.
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                </p>
-            </div>
+        <section class="contacts">
+            <h1 class="visually-hidden">Моя контактная информация</h1>
+            <ul class="contacts-list">
+                <li>@kseni_oz</li>
+                <li>Telegram +7 981 846 82 91</li>
+            </ul>
         </section>
     </main>
     <footer class="footer-inner">
