--- a/index.html
+++ b/index.html
@@ -7,50 +7,50 @@
     <meta name="theme-color" content="#b5b5b5">
     <meta name="Description" content="A home page of photographer Ksenia Ozimina">
     <link rel="stylesheet" href="css/main.css">
-    <title>Ksenia Oz photographer portfolio</title>
+    <title>Ксения Озимина</title>
 </head>
 <body>
-        <header>
-            <div class="logo"></div>
-            <!-- <img class="logo" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203"> -->
-            <nav class="navigation">
-                <ul class="navigation-list">
-                    <li class="navigation-list-item">
-                        <a href="about.html">Обо мне</a>
-                    </li>
-                    <li class="navigation-list-item">
-                        <a href="portfolio.html">Портфолио</a>
-                    </li>
-                    <li class="navigation-list-item">
-                        <a href="#">Цены</a>
-                    </li>
-                    <li class="navigation-list-item">
-                        <a href="contacts.html">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <h1 class="visually-hidden">Домашняя страница Ксении Озиминой</h1>
-            <img class="portrait" src="img/photo.jpg" alt="Портрет Ксении Озиминой" width="294" height="294">
-            <button class="button button-index">Посмотреть фотографии</button>
-        </main>
-        <footer>
-            <h2 class="visually-hidden">Как связаться с Ксенией Озиминой в социальных сетях</h2>
-            <ul class="social-list">
-                <li class="social-list-item">
-                    <a class="icon-gmail" href="mailto:oziminaksenia@gmail.com" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Ксения Озимина на Gmail</span></a>
+    <header>
+        <div class="logo"></div>
+        <!-- <img class="logo" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203"> -->
+        <nav class="navigation">
+            <ul class="navigation-list">
+                <li class="navigation-list-item">
+                    <a href="about.html">Обо мне</a>
                 </li>
-                <li class="social-list-item">
-                    <a class="icon-insta" href="https://www.instagram.com/kseni_oz" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Профиль Ксении Озиминой в Instagram</span></a>
+                <li class="navigation-list-item">
+                    <a href="portfolio.html">Портфолио</a>
                 </li>
-                <li class="social-list-item">
-                    <a class="icon-vk" href="https://vk.com/id143321934" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Страница Ксении Озиминой в Вконтакте</span></a>
+                <li class="navigation-list-item">
+                    <a href="#">Цены</a>
                 </li>
-                <li class="social-list-item">
-                    <a class="icon-fb" href="#" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Страница Ксении Озиминой на Facebook</span></a>
+                <li class="navigation-list-item">
+                    <a href="contacts.html">Контакты</a>
                 </li>
             </ul>
-        </footer>
+        </nav>
+    </header>
+    <main>
+        <h1 class="visually-hidden">Домашняя страница Ксении Озиминой</h1>
+        <img class="portrait" src="img/photo.jpg" alt="Портрет Ксении Озиминой" width="294" height="294">
+        <button class="button button-index">Посмотреть фотографии</button>
+    </main>
+    <footer>
+        <h2 class="visually-hidden">Как связаться с Ксенией Озиминой в социальных сетях</h2>
+        <ul class="social-list">
+            <li class="social-list-item">
+                <a class="icon-gmail" href="mailto:oziminaksenia@gmail.com" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Ксения Озимина на Gmail</span></a>
+            </li>
+            <li class="social-list-item">
+                <a class="icon-insta" href="https://www.instagram.com/kseni_oz" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Профиль Ксении Озиминой в Instagram</span></a>
+            </li>
+            <li class="social-list-item">
+                <a class="icon-vk" href="https://vk.com/id143321934" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Страница Ксении Озиминой в Вконтакте</span></a>
+            </li>
+            <li class="social-list-item">
+                <a class="icon-fb" href="#" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Страница Ксении Озиминой на Facebook</span></a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
