изменил мобильное меню, добавил current эффекты, подстилизовал контакты

--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
         <a href="index.html"><span class="visually-hidden">На главную</span><div class="logo"></div></a>
         <nav class="navigation">
             <ul class="navigation-list">
-                <li class="navigation-list-item">
-                    <a href="#">Обо мне</a>
+                <li class="navigation-list-item current-item">
+                    <a href="#" class="current">Обо мне</a>
                 </li>
                 <li class="navigation-list-item">
                     <a href="portfolio.html">Портфолио</a>
