--- a/contacts.html
+++ b/contacts.html
@@ -23,8 +23,8 @@
                 <li class="navigation-list-item">
                     <a href="#">Цены</a>
                 </li>
-                <li class="navigation-list-item">
-                    <a href="#">Контакты</a>
+                <li class="navigation-list-item current-item">
+                    <a href="#" class="current">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -33,8 +33,18 @@
         <section class="contacts">
             <h1 class="visually-hidden">Моя контактная информация</h1>
             <ul class="contacts-list">
-                <li>@kseni_oz</li>
-                <li>Telegram +7 981 846 82 91</li>
+                <li>
+                    <h2>Instagram</h2>
+                    <a href="https://instagram.com/kseni_oz">@kseni_oz</a>
+                </li>
+                <li>
+                    <h2>Мобильный</h2>
+                    <a href="tel:+7 981 846 82 91">+7 981 846 82 91</a>
+                </li>
+                <li>
+                    <h2>Telegram</h2>
+                    <a href="https://t.me/Kseni_Oz">Kseni_Oz</a>
+                </li>
             </ul>
         </section>
     </main>
