--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Контактная информация</title>
 </head>
-<body>
+<body class="inner-body">
     <header>
         <a href="index.html"><span class="visually-hidden">На главную</span><div class="logo"></div></a>
         <nav class="navigation">
@@ -35,15 +35,15 @@
             <ul class="contacts-list">
                 <li>
                     <h2>Instagram</h2>
-                    <a href="https://instagram.com/kseni_oz">@kseni_oz</a>
+                    <a href="https://instagram.com/kseni_oz" target="_blank" rel="noopener noreferrer">@kseni_oz</a>
                 </li>
                 <li>
                     <h2>Мобильный</h2>
-                    <a href="tel:+7 981 846 82 91">+7 981 846 82 91</a>
+                    <a href="tel:+7 981 846 82 91" target="_blank" rel="noopener noreferrer">+7 981 846 82 91</a>
                 </li>
                 <li>
                     <h2>Telegram</h2>
-                    <a href="https://t.me/Kseni_Oz">Kseni_Oz</a>
+                    <a href="https://t.me/Kseni_Oz" target="_blank" rel="noopener noreferrer">Kseni_Oz</a>
                 </li>
             </ul>
         </section>
