--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Ксения Озимина</title>
 </head>
-<body>
+<body class="index-body">
     <header>
         <div class="logo"></div>
         <!-- <img class="logo" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203"> -->
