--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Обо мне</title>
 </head>
-<body>
+<body class="inner-body">
     <header>
         <a href="index.html"><span class="visually-hidden">На главную</span><div class="logo"></div></a>
         <nav class="navigation">
