подровнял немного отступы и выровнял футер

--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#b5b5b5">
     <meta name="Description" content="A home page of photographer Ksenia Ozimina">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Контактная информация</title>
 </head>
@@ -21,7 +22,7 @@
                     <a href="portfolio.html">Портфолио</a>
                 </li>
                 <li class="navigation-list-item">
-                    <a href="#">Цены</a>
+                    <a href="prices.html">Цены</a>
                 </li>
                 <li class="navigation-list-item current-item">
                     <a href="#" class="current">Контакты</a>
