--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#b5b5b5">
     <meta name="Description" content="A home page of photographer Ksenia Ozimina">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Ксения Озимина</title>
 </head>
@@ -22,7 +23,7 @@
                     <a href="portfolio.html">Портфолио</a>
                 </li>
                 <li class="navigation-list-item">
-                    <a href="#">Цены</a>
+                    <a href="prices.html">Цены</a>
                 </li>
                 <li class="navigation-list-item">
                     <a href="contacts.html">Контакты</a>
@@ -30,7 +31,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="index-main">
         <h1 class="visually-hidden">Домашняя страница Ксении Озиминой</h1>
         <img class="portrait" src="img/photo.jpg" alt="Портрет Ксении Озиминой" width="294" height="294">
         <button class="button button-index">Посмотреть фотографии</button>
