--- a/prices.html
+++ b/prices.html
@@ -8,21 +8,21 @@
     <meta name="Description" content="A home page of photographer Ksenia Ozimina">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Обо мне</title>
+    <title>Цены</title>
 </head>
 <body class="inner-body">
     <header>
         <a href="index.html"><span class="visually-hidden">На главную</span><div class="logo"></div></a>
         <nav class="navigation">
             <ul class="navigation-list">
-                <li class="navigation-list-item current-item">
-                    <a href="#" class="current">Обо мне</a>
+                <li class="navigation-list-item">
+                    <a href="about.html">Обо мне</a>
                 </li>
                 <li class="navigation-list-item">
                     <a href="portfolio.html">Портфолио</a>
                 </li>
-                <li class="navigation-list-item">
-                    <a href="prices.html">Цены</a>
+                <li class="navigation-list-item current-item">
+                    <a href="#" class="current">Цены</a>
                 </li>
                 <li class="navigation-list-item">
                     <a href="contacts.html">Контакты</a>
@@ -31,33 +31,7 @@
         </nav>
     </header>
     <main class="inner-main">
-        <section class="about-info">
-            <h1 class="visually-hidden">Краткая информация о Ксении Озиминой</h1>
-            <div class="grid-element text-element1">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity.
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                </p>
-            </div>
-            <div class="grid-element img-element1">
-                <img src="img/about_image1.jpg" alt="Моя фотография" width="400" height="420">
-            </div>
-            <div class="grid-element img-element2">
-                <img src="img/about_image2.jpg" alt="Моя вторая фотография" width="400" height="420">
-            </div>
-            <div class="grid-element text-element2">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity.
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
-                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire
-                </p>
-            </div>
-        </section>
+        <h1 style="text-align:center;margin:0;padding:0;">Здесь пока ничего нет :(</h1>
     </main>
     <footer class="footer-inner">
         <h2 class="visually-hidden">Как связаться с Ксенией Озиминой в социальных сетях</h2>
