--- a/contacts.html
+++ b/contacts.html
@@ -40,7 +40,7 @@
                 </li>
                 <li>
                     <h2>Мобильный</h2>
-                    <a href="tel:+7 981 846 82 91" target="_blank" rel="noopener noreferrer">+7 981 846 82 91</a>
+                    <a href="tel:+7 981 846 82 91">+7 981 846 82 91</a>
                 </li>
                 <li>
                     <h2>Telegram</h2>
