--- a/contacts.html
+++ b/contacts.html
@@ -65,6 +65,7 @@
                 <a class="icon-fb" href="#" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Страница Ксении Озиминой на Facebook</span></a>
             </li>
         </ul>
+        <a class="button button-signup" href="signup.html">Записаться</a>
     </footer>
 </body>
 </html>
