--- a/signup.html
+++ b/signup.html
@@ -18,8 +18,8 @@
                 <li class="navigation-list-item">
                     <a href="about.html">Обо мне</a>
                 </li>
-                <li class="navigation-list-item current-item">
-                    <a href="portfolio.html" class="current">Портфолио</a>
+                <li class="navigation-list-item">
+                    <a href="portfolio.html">Портфолио</a>
                 </li>
                 <li class="navigation-list-item">
                     <a href="prices.html">Цены</a>
@@ -31,11 +31,25 @@
         </nav>
     </header>
     <main class="inner-main">
-        <h1 style="text-align:center;margin:0;padding:0;">Здесь пока ничего нет :(</h1>
+        <section class="signup">
+            <h1 class="visually-hidden">Страница записи на фотосессию</h1>
+            <form class="signup-form" action="echo.htmlacademy.ru" method="POST">
+                <label for="name">Ваше имя</label>
+                <input id="name" type="text" name="name" placeholder="Петя Клинков">
+                <label for="date">Удобная для Вас дата</label>
+                <input id="date" type="text" name="date" placeholder="20.02.2000">
+                <label for="email">Ваша электронная почта</label>
+                <input id="email" type="email" name="email" placeholder="kotik@gmail.com" required>
+                <div class="sign-buttons">
+                    <button class="button" type="submit">Готово!</button>
+                    <button class="button" type="reset">Сбросить</button>
+                </div>
+            </form>
+        </section>
     </main>
-    <footer class="footer-inner">
+    <footer class="footer-inner footer-inner--signup">
         <h2 class="visually-hidden">Как связаться с Ксенией Озиминой в социальных сетях</h2>
-        <ul class="social-list">
+        <ul class="social-list social-list--signup">
             <li class="social-list-item">
                 <a class="icon-gmail" href="mailto:oziminaksenia@gmail.com" target="_blank" rel="noopener noreferrer"><span class="visually-hidden">Ксения Озимина на Gmail</span></a>
             </li>
