--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
     <main class="inner-main">
         <section class="signup">
             <h1 class="visually-hidden">Страница записи на фотосессию</h1>
-            <form class="signup-form" action="echo.htmlacademy.ru" method="POST">
+            <form class="signup-form" netlify name="sign-up" method="POST">
                 <label for="name">Ваше имя</label>
                 <input id="name" type="text" name="name" placeholder="Петя Клинков">
                 <label for="date">Удобная для Вас дата</label>
