--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
                 <input id="date" type="text" name="date" placeholder="20.02.2000">
                 <label for="email">Ваша электронная почта</label>
                 <input id="email" type="email" name="email" placeholder="kotik@gmail.com" required>
-                <div data-netlify-recaptcha="true"></div>
+                <div class="captcha" data-netlify-recaptcha="true"></div>
                 <div class="sign-buttons">
                     <button class="button" type="reset">Сбросить</button>
                     <button class="button" type="submit">Готово!</button>
