--- a/signup.html
+++ b/signup.html
@@ -32,12 +32,12 @@
     </header>
     <main class="inner-main">
         <section class="signup">
-            <h1 class="visually-hidden">Страница записи на фотосессию</h1>
+            <h2>Записаться на фотосессию</h1>
             <form class="signup-form" netlify data-netlify-recaptcha="true" name="sign-up" method="POST">
                 <label for="name">Ваше имя</label>
                 <input id="name" type="text" name="name" placeholder="Петя Клинков">
                 <label for="date">Удобная для Вас дата</label>
-                <input id="date" type="text" name="date" placeholder="20.02.2000">
+                <input id="date" type="text" name="date" placeholder="20.02.2019">
                 <label for="email">Ваша электронная почта</label>
                 <input id="email" type="email" name="email" placeholder="kotik@gmail.com" required>
                 <div class="captcha" data-netlify-recaptcha="true"></div>
