--- a/signup.html
+++ b/signup.html
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#b5b5b5">
-    <meta name="Description" content="A home page of photographer Ksenia Ozimina">
+    <meta name="Description" content="Домашняя страница фотографа Ксении Озиминой">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <title>Записаться</title>
 </head>
 <body class="inner-body">
     <header>
-        <a href="index.html"><span class="visually-hidden">На главную</span><div class="logo"></div></a>
+        <a class="logo-link" href="index.html">
+            <span class="visually-hidden">
+                На главную
+            </span>
+        </a>
+        <a href="index.html" class="menu-button main-link">Главная</a>
+        <button class="menu-button menu-js">Меню</button>
+        <div class="overlay2"></div>
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-list-item">
@@ -32,15 +39,14 @@
     </header>
     <main class="inner-main">
         <section class="signup">
-            <h2>Записаться на фотосессию</h1>
-            <form class="signup-form" netlify data-netlify-recaptcha="true" name="sign-up" method="POST">
+            <h2>Записаться на фотосессию</h2>
+            <form class="signup-form" data-netlify="true" name="sign-up" method="POST">
                 <label for="name">Ваше имя</label>
                 <input id="name" type="text" name="name" placeholder="Петя Клинков">
                 <label for="date">Удобная для Вас дата</label>
                 <input id="date" type="text" name="date" placeholder="20.02.2019">
                 <label for="email">Ваша электронная почта</label>
                 <input id="email" type="email" name="email" placeholder="kotik@gmail.com" required>
-                <div class="captcha" data-netlify-recaptcha="true"></div>
                 <div class="sign-buttons">
                     <button class="button" type="reset">Сбросить</button>
                     <button class="button" type="submit">Готово!</button>
@@ -65,5 +71,6 @@
             </li>
         </ul>
     </footer>
+    <script src="js/menu.js"></script>
 </body>
 </html>
