--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#b5b5b5">
-    <meta name="Description" content="A home page of photographer Ksenia Ozimina">
+    <meta name="Description" content="Домашняя страница фотографа Ксении Озиминой">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <title>Ксения Озимина</title>
 </head>
 <body class="index-body">
     <header>
-        <div class="logo"></div>
-        <!-- <img class="logo" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203"> -->
+        <img class="logo-link logo-link-index" src="img/logo.png" alt="Логотип Ксении Озиминой" width="713" height="203">
+        <button class="menu-button menu-js">Меню</button>
+        <div class="overlay2"></div>
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-list-item">
@@ -57,8 +58,8 @@
     </footer>
     <!-- sign form -->
     <section class="signup signup-popup">
-        <h2>Записаться на фотосессию</h1>
-        <form class="signup-form" netlify name="sign-up" method="POST">
+        <h2>Записаться на фотосессию</h2>
+        <form class="signup-form" data-netlify="true" name="sign-up" method="POST">
             <label for="name">Ваше имя</label>
             <input id="name" type="text" name="name" placeholder="Петя Клинков">
             <label for="date">Удобная для Вас дата</label>
@@ -74,5 +75,6 @@
     </section>
     <div class="overlay"></div>
     <script src="js/popup.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 </html>
