--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         <button class="menu-button menu-js">Меню</button>
         <div class="overlay2"></div>
         <nav class="navigation">
-            <ul class="navigation-list">
+            <ul class="navigation-list no-js">
                 <li class="navigation-list-item">
                     <a href="about.html">Обо мне</a>
                 </li>
