собрал js в один файл и уменьшил немного форму

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <label for="date">Удобная для Вас дата (необязательно)</label>
             <input id="date" type="text" name="date" placeholder="20.02.2019">
             <label for="ideas">Идеи и пожелания для фотосессии (необязательно)</label>
-            <textarea id="ideas" name="ideas" rows="5" placeholder="Хочу сфотографироваться в костюме кота"></textarea>
+            <textarea id="ideas" name="ideas" rows="3" placeholder="Хочу сфотографироваться в костюме кота"></textarea>
             <label for="email">Электронная почта (спамить не будем)</label>
             <input id="email" type="email" name="email" placeholder="kotik@gmail.com" required>
             <label for="tel">Номер для связи</label>
@@ -75,7 +75,6 @@
         </form>
     </section>
     <div class="overlay"></div>
-    <script src="js/popup.js"></script>
-    <script src="js/menu.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
